--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand navbar-dark bg-dark">
   <a class="navbar-brand" href="/">CatBook</a>
   <% if(user) { %>
-    <span class="navbar-text text-light ml-3">Logged in as: <%= user.username %></span>
+    <span class="navbar-text text-light ml-3">Hello, <%= user.username %></span>
   <% } %>
   <div class="navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
@@ -17,10 +17,10 @@
         </li>
       <% } else { %>
         <li class="nav-item">
-          <a class="nav-link" href="/upload">Upload</a>
+          <a class="nav-link" href="/upload">Add Post</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/logout">Logout</a>
+          <a class="btn btn-secondary" href="/logout">Logout</a>
         </li>
       <% } %>
     </ul>
